# Netflix-Project

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.main  Dockerfile.tests  Dockerfile.webServer  README.md  docker-compose.yml  local.properties  makefile  settings.gradle.kts
app/: build.gradle.kts
data/: user_movies_data.txt
docs/: Android_Start.md  Home_Page.md  Home_Page_web.md  Web_Start.md  category_screen.md  category_screen_web.md  details_screen.md  details_screen_web.md  manager_screen.md  manager_screen_web.md  sign-in_screen.md  sign-in_screen_web.md  sign-up_screen.md  sign-up_screen_web.md  watch_screen.md  watch_screen_web.md  wiki.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
netflix/: .gitignore  Dockerfile.react  package-lock.json  package.json
netflix/src/: App.js  HomePage.css  HomePage.js  Login.css  Login.js  Register.css  Register.js  axiosInstance.js  index.js
src/recommendation_client/: client.py
src/recommendation_server/: AddCommand.cpp  AddCommand.h  App.cpp  App.h  ClientHandler.cpp  ClientHandler.h  ConsoleMenu.cpp  ConsoleMenu.h  DELETECommand.cpp  DELETECommand.h  FileManager.cpp  FileManager.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  IDataManager.h  IExecutor.h  IInput.h  IMenu.h  IOutput.h  IRunnable.h  Init.cpp  Init.h  (+31 more)
tests/: DELETECommandTest.cpp  FileManagerTest.cpp  HelpCommandTest.cpp  MovieListTest.cpp  MovieTest.cpp  PATCHPOSTCommandTest.cpp  RecommendCommandTest.cpp  SeparateThreadExecutorTest.cpp  ServerTest.cpp  SocketInputTest.cpp  SocketOutputTest.cpp  UserTest.cpp
(+98 files in other folders)
